package org.bank.enums;

public enum Role {
    CLIENT,
    MANAGER,
}