package org.bank.enums;

public enum TypeCompte {
    COURANT,
    EPARGNE,
    DEPOTATERME
}