package org.bank.enums;

public enum TypeTransaction {
    DEPOT,
    RETRAIT,
    VIREMENT
}